test/langtools/tools/javac/meth/BootstrapAnnos/BadBootstrapAnnotations.out
BadBootstrapAnnotations.java:20:5: compiler.warn.not.bootstrap.method: kindname.method, a(), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:19:5: compiler.warn.not.bootstrap.method: kindname.method, a(), (compiler.misc.dynamic.constant)
BadBootstrapAnnotations.java:24:5: compiler.warn.not.bootstrap.method: kindname.method, BadBootstrapAnnotations(), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:23:5: compiler.warn.not.bootstrap.method: kindname.method, BadBootstrapAnnotations(), (compiler.misc.dynamic.constant)
BadBootstrapAnnotations.java:27:5: compiler.warn.not.bootstrap.method: kindname.method, nonStaticBoot(java.lang.invoke.MethodHandles.Lookup,java.lang.String,java.lang.invoke.MethodType), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:27:24: compiler.warn.not.bootstrap.method: kindname.method, nonStaticBoot(java.lang.invoke.MethodHandles.Lookup,java.lang.String,java.lang.invoke.MethodType), (compiler.misc.dynamic.constant)
BadBootstrapAnnotations.java:28:5: compiler.warn.not.bootstrap.method: kindname.method, badIndyBoot(java.lang.invoke.MethodHandles.Lookup,java.lang.String,java.lang.invoke.MethodType), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:29:5: compiler.warn.not.bootstrap.method: kindname.method, badIndyBoot(java.lang.String,java.lang.String,java.lang.invoke.MethodType), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:30:5: compiler.warn.not.bootstrap.method: kindname.method, badIndyBoot(java.lang.invoke.MethodHandles.Lookup,int,java.lang.invoke.MethodType), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:31:5: compiler.warn.not.bootstrap.method: kindname.method, badIndyBoot(java.lang.invoke.MethodHandles.Lookup,java.lang.String,java.lang.constant.ConstantDesc), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:34:9: compiler.warn.not.bootstrap.method: kindname.method, BadBootstrapAnnotations.MySite(java.lang.invoke.MethodHandles.Lookup,java.lang.String,java.lang.String), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:40:9: compiler.warn.not.bootstrap.method: kindname.method, BadBootstrapAnnotations.MySite(java.lang.invoke.MethodHandles.Lookup,int,java.lang.invoke.TypeDescriptor), (compiler.misc.dynamic.call.site)
BadBootstrapAnnotations.java:39:9: compiler.warn.not.bootstrap.method: kindname.method, BadBootstrapAnnotations.MySite(java.lang.invoke.MethodHandles.Lookup,int,java.lang.invoke.TypeDescriptor), (compiler.misc.dynamic.constant)
BadBootstrapAnnotations.java:46:5: compiler.warn.not.bootstrap.method: kindname.method, badCondyBoot(java.lang.Object,java.lang.String,java.lang.invoke.MethodType), (compiler.misc.dynamic.constant)
- compiler.err.warnings.and.werror
1 error
14 warnings
